debug.txt
(venv) sick7@raspberrypi:~/SICK/SICK-Capstone/arduino_stuff/lidar_detection $ ./upload.sh
==========================================
LiDAR Detection Arduino Upload Script
==========================================
Found Arduino at: /dev/ttyUSB1
Compiling and uploading lidar_detection.ino...
/home/sick7/SICK/SICK-Capstone/arduino_stuff/lidar_detection/lidar_detection.ino: In function 'void loop()':
/home/sick7/SICK/SICK-Capstone/arduino_stuff/lidar_detection/lidar_detection.ino:90:17: error: redeclaration of 'long unsigned int now'
   unsigned long now = millis();
                 ^~~
/home/sick7/SICK/SICK-Capstone/arduino_stuff/lidar_detection/lidar_detection.ino:61:17: note: 'long unsigned int now' previously declared here
   unsigned long now = millis();
                 ^~~

Used platform Version Path
arduino:avr   1.8.6   /home/sick7/.arduino15/packages/arduino/hardware/avr/1.8.6
Error during build: exit status 1
ERROR: Arduino compilation failed.
